# simple_shotter

./: .claudeignore  .gitignore  .nsis-config.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
debian/: changelog  control  copyright  simpleshotter.desktop
docs/: architecture.md  test_plan.md
installer/: EasyShotter.nsi  SimpleShotter.nsi
resources/: resources.qrc
scripts/: collect_dist.py  pack.bat
src/: CMakeLists.txt  main.cpp
src/core/: control_detector.cpp  control_detector.h  region_selector.cpp  region_selector.h  screen_capture.cpp  screen_capture.h  window_detector.cpp  window_detector.h
src/platform/: platform_api.cpp  platform_api.h
src/platform/linux/: linux_platform_api.cpp  linux_platform_api.h
src/platform/win/: win_platform_api.cpp  win_platform_api.h
src/ui/: annotation_item.cpp  annotation_item.h  capture_overlay.cpp  capture_overlay.h  main_window.cpp  main_window.h  preview_widget.cpp  preview_widget.h  save_menu_widget.cpp  save_menu_widget.h  style_panel_widget.cpp  style_panel_widget.h  toolbar_widget.cpp  toolbar_widget.h
src/utils/: clipboard_manager.cpp  clipboard_manager.h  file_saver.cpp  file_saver.h  hotkey_manager.cpp  hotkey_manager.h
tests/: CMakeLists.txt  mock_platform_api.h  test_clipboard_manager.cpp  test_control_detector.cpp  test_file_saver.cpp  test_hotkey_manager.cpp  test_region_selector.cpp  test_screen_capture.cpp  test_window_detector.cpp
tests/utils/: test_file_saver.cpp
